--- a/Miscellaneous Facts/Miscellaneous Facts.tex
+++ b/Miscellaneous Facts/Miscellaneous Facts.tex
@@ -1553,7 +1553,7 @@ Fix $N>N'$ and  $x \inr$. Using $\frac{1}{2\pi}\int_{-\pi}^{\pi}K_N(t)dt=1$ and 
 \abso{\sigma_N(f;x)-f(x)}&=\abso{\frac{1}{2\pi}\int_{-\pi}^{\pi}f(x-t)K_N(t)dt-f(x)\frac{1}{2\pi}\int_{-\pi}^{\pi}K_N(t)dt}\\
 &=\frac{1}{2\pi}\int_{-\pi}^{\pi}\abso{f(x-t)-f(x)}K_N(t)dt\\
 &=\frac{1}{2\pi}\int_{-\delta}^{\delta} \abso{f(x-t)-f(x)}K_N(t)dt+\frac{2(\pi -\delta)2M}{2\pi}\cdot \frac{1}{N+1}\cdot \frac{2}{1-\cos \delta}\\
-&\leq \frac{1}{2\pi}\int_{-\pi}^{\pi}\frac{\epsilon }{2}K_N(t)dt+\frac{4M(\pi -\delta)}{(N+1)\pi(1-\cos \delta)\pi}\\
+&\leq \frac{1}{2\pi}\int_{-\pi}^{\pi}\frac{\epsilon }{2}K_N(t)dt+\frac{4M(\pi -\delta)}{(N+1)\pi(1-\cos \delta)}\\
 &=\frac{\epsilon}{2}+\frac{4M(\pi-\delta)}{\frac{2Q_\delta}{\epsilon }\pi(1-\cos \delta)}=\frac{\epsilon}{2}+\frac{\epsilon}{2}=\epsilon\vdone
 \end{align*}
 \end{proof}
